tag-0.2-20210709e JP
  - Use json.loads to convert cleaned and encoded JSON back into a Python dictionary

tag-0.2-20210709d JP
  - Use DjangoJSONEncoder to convert Decimal and other fields as necesary

tag-0.2-20210709c JP
  - EntityJSON can't be a list, so make it a dict with myGLOBALURN keys

tag-0.2-20210709b JP
  - Don't text encode EntityJSON, represent multiple source records as an EntityJSON list

tag-0.2-20210709 JP
  - Apply most recent standard router coding conventions
  - Change 'Type=Training Session' to 'Type=Training'
  - Markup warnings now logged at debug level
  - Fuzzy matches only printed at debug level
  - Only match to Affiliation=xsede.org organizations
  - Improve ShortDescriptions
  - Print no Provider matches as a summary at the end

tag-0.2-20210708 JP
  - Replace 'xsede.org' with 'info.xsede.org' in Warehouse_XDCDB_Training_Class_Session GlobalURN

tag-0.2-20210707 JP
  - Add missing ResourceV3Local.CatalogMetaURL

tag-0.2-20210702 JP
  - Tag Peter's latest changes

tag-0.1-20210313 PE
  - Add more information to the course descriptions and format in HTML.

tag-0.1-20210127 PE
  - Changed portal query to return all training information but flag which ones are displayed in the portal. Only those are stored in the warehouse.
        Added bin/README file with the updated query to be stored in the warehouse catalog table.
  - Set the short description to be the name of the training
  - Set resource type to "Training Session" instead of "TrainingSession"
  - Set ResourceGroup to "Streamed Events" if no training_type is specified but a training_url is specified.

tag-0.0-20201126 JP
  - Name files consistently route_training_v3

tag-0.0-20201116 JP
  - Re-enable ES indexing()

tag-0.0-20201113 JP
  - Improve conf/ *bin/ file names and contents to better support prodution and (mac) development environments

tag-0.0-20201005 JP
  - Merge latest router structure with Peter's first check-in